--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lyrics Player Vallenato Retro Mood</title>
+    <title>Te la dedico amor </title>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <style>
         /* --- ESTILOS (CSS) --- */
@@ -90,15 +90,15 @@
             { time: 39.3, text: "¡Porque tú!" },
             { time: 41.0, text: "Porque tú eres muy buena conmigo" },
             { time: 44.2, text: "Porque tú eres muy <span class='keyword-emphasis'>linda</span> conmigo" },
-            { time: 47.6, text: "Porque yo te <span class='keyword-emphasis'>amaréa</span> hasta el final." },
+            { time: 47.6, text: "Porque yo te <span class='keyword-emphasis'>amaré</span> hasta el final." },
         ];
 
         const pulseMoments = [
             { time: 15.1, duration: 0.2 }, { time: 16.8  duration: 0.3 },
             { time: 20.0, duration: 0.5}, { time: 24.0, duration: 0.8 },
             { time: 27.0, duration: 0.15 }, { time:29, duration: 0.2 }, 
-            { time: 39.3, duration: 0.1 }, { time: 41.0, duration: 0.1 },
-            { time: 44.2, duration: 0.1 }, { time: 47.6, duration: 0.15 } 
+            { time: 39.3, duration: 0.2 }, { time: 41.0, duration: 0.2 },
+            { time: 44.2, duration: 0.2 }, { time: 47.6, duration: 0.15 } 
         ];
 
         const moodChanges = [
